--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<title> Friendly Farmer </title>
 
 <head>
 <!-- Style code for the navigation bar -->
@@ -41,6 +41,11 @@ li a:hover:not(.active) {
 .active {
     background-color: #4CAF50; <!-- active selection stays green -->
 }
+	
+h1 {
+    font-family:Monotype Corsiva;	
+}
+	
 </style>
 </head>
 
@@ -61,18 +66,8 @@ li a:hover:not(.active) {
 </section>
 
 <h1>The Friendly Farmer </h1>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
-<p>Some text some text some text some text..</p>
+	
+	<p> Site Under Construction </p>
 
 </body>
 
