--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <div class="main">
 	<h1> The Friendly Farmer </h1>
+	<h2> Produce Whole Distributors <h2>
 	<p> Site Under Construction! Stay Tuned! </p>
 
 </div>
