--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css"
-<head> </head>
+<link rel="stylesheet" href="style.css">
 <title> The Friendly Farmer </title>
-
-<body>
+<head>
 
 <!-- Navigation bar -->
 <section>
-<ul>
-	<li><a href="javascript:void(0)">Home</a></li>
-	<li><a href="javascript:void(0)">Heading 2</a></li>
-	<li><a href="javascript:void(0)">Heading 3</a></li>
-	<li><a href="javascript:void(0)">Heading 3</a></li>
-</ul>
+	<ul>
+		<li><a href="javascript:void(0)">Home</a></li>
+		<li><a href="javascript:void(0)">About</a></li>
+		<li><a href="javascript:void(0)">Products</a></li>
+		<li><a href="javascript:void(0)">Become A Customer</a></li>
+	</ul>
 </section>
+
+<!-- Title Bar -->
+<section>
+	<h1> The Friendly Farmer </h1>
+	<h2> Produce Whole Distributors </h2>
+</section>
+
+ </head>
+
+<body>
 
 <!-- image -->
 <section>
@@ -25,10 +33,7 @@
 
 
 <div class="main">
-	<h1> The Friendly Farmer </h1>
-	<h2> Produce Whole Distributors <h2>
 	<p> Site Under Construction! Stay Tuned! </p>
-
 </div>
 
 </body>
