--- a/contactus.html
+++ b/contactus.html
@@ -5,14 +5,26 @@
 <title> The Friendly Farmer </title>
 
 <head></head>
-<h2>Contact Us </h1>
-<h3>11 Cidermill Ave</h3>
-<h3>Vaughan, Ontario</h3>
-<h3>L4K 4B6 Canada</h3>
-<h3>Telephone: (905) 761-9949 </h3>
+<!-- Navigation bar -->
+<section>
+	<ul>
+    <li><a href="index.html">Home</a></li>
+		<li><a href="javascript:void(0)">About</a></li>
+		<li><a href="javascript:void(0)">Products</a></li>
+		<li><a href="customer.html">Become A Customer</a></li>
+		<li><a href="contactus.html">Contact Us</a><li>
+	</ul>
+</section>
 
+<body>
+  <h1>Contact Us </h1>
+  <h3>11 Cidermill Ave</h3>
+  <h3>Vaughan, Ontario</h3>
+  <h3>L4K 4B6 Canada</h3>
+  <h3>Telephone: (905) 761-9949 </h3>
+</body>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1439.71534808594!2d-79.52701418220909!3d43.805424985293214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6ec1cb5c966300bd!2sThe+friendly+Farmer!5e0!3m2!1sen!2sca!4v1486402582605" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1439.71534808594!2d-79.52701418220909!3d43.805424985293214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6ec1cb5c966300bd!2sThe+friendly+Farmer!5e0!3m2!1sen!2sca!4v1486402582605" width="600" height="450" frameborder="10" style="border:10" allowfullscreen></iframe>
 
 
 </html>
