--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <!-- Navigation bar -->
 <section>
 	<ul>
-		<li><a href="javascript:void(0)">Home</a></li>
-		<li><a href="contactus.html">About</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="javascript:void(0)">About</a></li>
 		<li><a href="javascript:void(0)">Products</a></li>
 		<li><a href="customer.html">Become A Customer</a></li>
+		<li><a href="contactus.html">Contact Us</a><li>
 	</ul>
 </section>
 
