--- a/customer.html
+++ b/customer.html
@@ -5,12 +5,40 @@
 <title> The Friendly Farmer </title>
 
 <section>
-	<form action="" method="POST" enctype="multipart/form-data">
-		<input name="action" value="submit" type="hidden"> Your Name:<br>
-		<input name="name" size="30" type="text"><br> Your E-mail:<br>
-		<input name="email" size="30" type="text"><br> Your Telephone:<br>
-		<textarea name="telephone" size="30">
-		</textarea><br>
-		<input value="Send email" type="submit">
-	</form>
+	<!-- Navigation bar javascript -->
+	<nav id="navMenu"></nav>
+	<script src="navigation.js"></script>
+</section>
+
+<head></head>
+
+<section>
+  <form>
+  <h4>Become A Customer</h4>
+  <div class="form-group">
+    <label for="firstName">First name</label>
+    <input type="text" class="form-control" id="exampleInputFirst" placeholder="First name">
+  </div>
+  
+  <div class="form-group">
+    <label for="lastName">Last name</label>
+    <input type="text" class="form-control" id="exampleInputLast" placeholder="Last name">
+  </div>
+  
+  <div class="form-group">
+    <label for="email">Email address <span style="color:red;">*</span></label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+  </div>
+  
+  <div class="form-group">
+    <label for="phoneNumber">Phone Number <span style="color:red;">*</span></label>
+    <input type="phoneNumber" class="form-control" id="phoneNumber" placeholder="Enter Phone Number">
+  </div>
+  
+  <div class="form-group">
+    <span class="text-muted"><em><span style="color:red;">*</span> Indicates required field</em></span>
+  </div>    
+  
+  <button type="submit" class="btn btn-default">Sign up</button>
+</form>
 </section>
