--- a/index.html
+++ b/index.html
@@ -3,34 +3,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <title> The Friendly Farmer </title>
-<head>
 
-<!-- Navigation bar -->
 <section>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="javascript:void(0)">About</a></li>
-		<li><a href="javascript:void(0)">Products</a></li>
-		<li><a href="customer.html">Become A Customer</a></li>
-		<li><a href="contactus.html">Contact Us</a><li>
-	</ul>
+	<!-- Navigation bar javascript -->
+	<nav id="navMenu"></nav>
+	<script src="navigation.js"></script>
 </section>
 
+<head>
 <!-- Title Bar -->
 <section>
 	<h1> The Friendly Farmer </h1>
 	<h2> Produce Wholesale Distributors </h2>
 </section>
-
- </head>
+</head>
 
 <body>
-
 <!-- image -->
 <section>
   <img src="images/img1.jpg" alt="Produce" style="width:100%">
 </section>
-
 
 
 <div class="main">
