--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <head>
 <!-- Title Bar -->
 <section>
-	<h1> The Friendly Farmer </h1>
+	<h1> The Jadmeister </h1>
 	<h2> Produce Wholesale Distributors </h2>
 </section>
 </head>
