Added changes and structure

--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
-<title> The Friendly Farmer </title>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="style.css">
+		<link href="css/normalize.css" rel="stylesheet" media="screen">
+		<title> The Friendly Farmer </title>
+	</head>
+	<body>
+		<section>
+			<!-- Navigation bar javascript -->
+			<nav id="navMenu"></nav>
+			<script src="navigation.js"></script>
+		</section>		  
+		<header>
+			<h1> The Friendly Farmer </h1>
+			<section id=picture>
+				<div id="logo">
+					<img src="images/logo.png" alt="logo" height="125" width="125">
+				</div>
+			</section>
+		</header>
+		<nav>
+			<ul></ul>
+		</nav>
+		<main>
+			<h2> Produce Wholesale Distributors </h2>
+		</main>
+		<footer>
 
-<section>
-	<!-- Navigation bar javascript -->
-	<nav id="navMenu"></nav>
-	<script src="navigation.js"></script>
-</section>
-
-<head>
-<!-- Title Bar -->
-<section>
-	<h1> The Jadmeister </h1>
-	<h2> Produce Wholesale Distributors </h2>
-</section>
-</head>
-
-<body>
-<!-- image -->
-<section>
-  <img src="images/img1.jpg" alt="Produce" style="width:100%">
-</section>
-
-
-<div class="main">
-	<p> Site Under Construction! Stay Tuned! </p>
-</div>
-
-</body>
+		</footer>
+	</body>
 </html>
+
